# NQueen_Problem

./: README.md  pyproject.toml
src/nqueen/: main.py
src/nqueen/Board_init/: board_init.py
src/nqueen/Queen_init/: queen_init.py
src/nqueen/Search/: search.py
